# paper-heuristic-system

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  setup.py
.agents/skills/paper_heuristic_system/references/: project_isolation.md
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
auto-prompts/: review-iteration-goal.md
docs/: citation_novelty.md  design.md  github_release_checklist.md  lineage.md
examples/minimal_latex/: idea.md  main.tex  refs.bib
legacy/paper_hs_skills_v1/: README.md
legacy/paper_hs_skills_v1/skills/00_paper_hs_controller/: SKILL.md
legacy/paper_hs_skills_v1/skills/01_ingest_existing_paper/: SKILL.md
legacy/paper_hs_skills_v1/skills/02_claim_graph_extractor/: SKILL.md
legacy/paper_hs_skills_v1/skills/03_evidence_ledger_builder/: SKILL.md
legacy/paper_hs_skills_v1/skills/04_reviewer_issue_mapper/: SKILL.md
legacy/paper_hs_skills_v1/skills/05_revision_planner/: SKILL.md
legacy/paper_hs_skills_v1/skills/06_patch_generator/: SKILL.md
legacy/paper_hs_skills_v1/skills/07_regression_evaluator/: SKILL.md
schemas/: citation_report.schema.json  novelty_report.schema.json  source_card.schema.json
scripts/: build_skill_zip.py  install_codex_skill.py
src/paper_hs/: __init__.py  bibtex.py  citation_audit.py  cli.py  latex.py  metadata.py  novelty.py  paths.py  project.py  reporting.py  scan.py  source_cards.py
templates/paper_project/: AGENTS.md
tests/: test_bibtex.py  test_latex.py  test_project_cli.py
(+17 files in other folders)
