[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-heuristic-system"
version = "0.2.0"
description = "A plug-and-play skill and CLI for iterative paper revision, citation verification, and novelty risk mapping."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Paper-HS contributors"}]
keywords = ["codex", "agent-skills", "paper-writing", "citation", "bibtex", "research"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = []

[project.scripts]
paper-hs = "paper_hs.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
paper_hs = ["py.typed", "resources/skills/paper_heuristic_system/**", "resources/templates/paper_project/**"]
